# sensitivity_torch

./: .gitignore  404.html  README.md  build_api_ref.py  index.html  mkdocs.yaml  objects.inv  pyproject.toml  setup.py  sitemap.xml
api/misc/: index.html
api/optimization/: index.html
api/overview/: index.html
api/sensitivity/: index.html
api/utils/: index.html
docs/: .buildinfo  extra.css  genindex.html  index.html  index.md  installation.md  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  sensitivity_torch.differentiation.html  sensitivity_torch.extras.html  sensitivity_torch.extras.nn_tools.html  sensitivity_torch.extras.optimization.html  sensitivity_torch.extras.pca.html  sensitivity_torch.html  sensitivity_torch.sensitivity.html  sensitivity_torch.specialized_matrix_inverse.html  sensitivity_torch.utils.html  tour.md  tutorial.bilevel_examples.html  tutorial.html  tutorial.installation.html  tutorial.optimization.html  tutorial.sensitivity.html  tutorial.tour.html
docs/_modules/: index.html
docs/_sources/: sensitivity_torch.extras.optimization.rst.txt  sensitivity_torch.rst.txt  sensitivity_torch.sensitivity.rst.txt  (+2 more)
docsrc/: Makefile  example.py
installation/: index.html
search/: search_index.json
sensitivity_torch/: batch_sensitivity.py  differentiation.py  sensitivity.py  specialized_matrix_inverse.py  utils.py
site/: 404.html  sitemap.xml
tests/: import_header.py  objs.py  test_conv.py  test_extras_opt.py  test_hessian.py  test_hessian_batch.py  test_jacobian.py  test_jacobian_batch.py
tour/: index.html
(+66 files in other folders)
